--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "private": true,
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.3",
+    "@codemirror/view": "^6.36.5",
+    "@lezer/highlight": "^1.2.1",
     "@monaco-editor/react": "^4.7.0",
+    "@types/react-bootstrap": "^0.32.37",
     "@types/react-router-dom": "^5.3.3",
+    "@uiw/codemirror-theme-github": "^4.23.10",
+    "@uiw/codemirror-theme-vscode": "^4.23.10",
+    "@uiw/codemirror-themes": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
+    "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.4.1"
   },
@@ -22,6 +30,7 @@
   },
   "scripts": {
     "dev": "vite",
+    "start": "vite",
     "build": "vite build",
     "serve": "vite preview"
   }
