--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "dependencies": {
     "@codemirror/lang-javascript": "^6.2.3",
     "@codemirror/view": "^6.36.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@lezer/highlight": "^1.2.1",
     "@monaco-editor/react": "^4.7.0",
+    "@mui/icons-material": "^7.0.1",
+    "@mui/material": "^7.0.1",
     "@types/react-bootstrap": "^0.32.37",
     "@types/react-router-dom": "^5.3.3",
     "@uiw/codemirror-theme-github": "^4.23.10",
