--- a/package.json
+++ b/package.json
@@ -3,7 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@codemirror/basic-setup": "^0.20.0",
+    "@codemirror/commands": "^6.8.1",
     "@codemirror/lang-javascript": "^6.2.3",
+    "@codemirror/state": "^6.5.2",
     "@codemirror/view": "^6.36.5",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
@@ -17,9 +20,11 @@
     "@uiw/codemirror-theme-vscode": "^4.23.10",
     "@uiw/codemirror-themes": "^4.23.10",
     "@uiw/react-codemirror": "^4.23.10",
+    "ace-builds": "^1.39.1",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
     "react": "^18.3.1",
+    "react-ace": "^14.0.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.4.1"
