--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ace-builds": "^1.39.1",
     "bootstrap": "^5.3.3",
     "dotenv": "^16.4.7",
+    "framer-motion": "^10.18.0",
     "react": "^18.3.1",
     "react-ace": "^14.0.1",
     "react-bootstrap": "^2.10.9",
@@ -34,6 +35,7 @@
     "@types/react": "^18.3.20",
     "@types/react-dom": "^18.3.5",
     "@vitejs/plugin-react": "^4.3.4",
+    "sass": "^1.86.3",
     "typescript": "^5.8.2",
     "vite": "^5.4.16"
   },
